fix flickering

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -62,23 +62,11 @@
   }
 
   .sidebar-item {
-    @apply text-gray-200 flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold transition-all duration-150 ease-in-out;
+    @apply text-gray-200 flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold;
   }
 
   .sidebar-item:hover {
     @apply bg-gray-700 text-white;
-  }
-
-  /* Sidebar slideover smooth transitions */
-  [data-tax-sidebar-target="element"] {
-    @apply transition-all duration-200 ease-in-out;
-    opacity: 0;
-    transform: translateX(-100%);
-  }
-
-  [data-tax-sidebar-target="element"]:not(.hidden) {
-    opacity: 1;
-    transform: translateX(0);
   }
 
   .label {
